--- a/cgv_phototicket/WebContent/pub/Phototicket_after_recommend_01.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_after_recommend_01.html
@@ -87,14 +87,8 @@
                     <div class="btn_area">
                         <div class="inner">
                             <div>
-                                <a class="btn-red btn-lg" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNorLarge active"></i>25</a>
-                                <a class="btn-red btn-lg _click" href="javascript:void(0);">
-                                    <svg class="icon-heart" style="position: absolute;left: 54px;top: 12px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.522 19.5" width="21.522" height="19.5">
-                                    <g id="ic_btn_like_nor" transform="translate(-2.239 -3.25)">
-                                        <path class="zoomIn" id="ic_btn_like_nor-2" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" transform="translate(3 4)" d="M 9.94 3.179 A 5.236 5.236 0 0 1 14.737 0 c 2.888 0 4.968 2.419 5.23 5.3 a 5.142 5.142 0 0 1 -0.168 2 a 8.825 8.825 0 0 1 -2.76 4.5 L 9.94 18 L 2.961 11.8 A 8.828 8.828 0 0 1 0.2 7.3 a 5.167 5.167 0 0 1 -0.169 -2 C 0.294 2.417 2.375 0 5.264 0 A 5.066 5.066 0 0 1 9.94 3.179 Z" data-name="ic_btn_like_nor" />
-                                    </g>
-                                    </svg>
-                                    25</a>
+                                <a class="btn-test btn-lg _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNorLarge"></i>25</a>
+                                <a class="btn-test2 btn-lg _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNorLarge"></i>25</a>
                             </div>
                             <div class="cancel_area">
                                 <a class="btn-cancel" href="javascript:void(0);">자랑취소하기</a>
@@ -113,7 +107,6 @@
     -->
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="../js/swiper.min.js"></script>
-<!--<script> var screenId = "PT004";</script>-->
 <script type="text/javascript" src="../js/phototicket.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
