--- a/cgv_phototicket/WebContent/pub/Phototicket_myticket_boast.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_myticket_boast.html
@@ -160,7 +160,7 @@
             <div class="imgcard_wrap">
                 <div class="row">
                     <div class="col">
-                        <div class="card" onclick="location.href='../pub/Phototicket_FlipSlider_type2.html'">
+                        <div class="card" onclick="location.href='javascript:void(0);'">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast1@2x.png" alt="자랑한 이미지">
                             </div>
@@ -168,10 +168,15 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>999</span>
                             </div>
-                            <a class="btn_like" href="../html/error.html"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <!--
+                         날짜: 2020.04.28
+                         수정 사항 : 링크 연결 중복 현상 수정\
+                          <a class="btn_like _click" href="javas..> 분리
+                        -->
+                        <a class="btn_like2 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
+                    <div class="col">
                         <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast2@2x.png" alt="자랑한 이미지">
@@ -180,8 +185,8 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -194,10 +199,10 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>10</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
+                    <div class="col">
                         <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast4@2x.png" alt="자랑한 이미지">
@@ -206,8 +211,8 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -220,8 +225,8 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col ">
                         <div class="card" onclick="">
@@ -232,8 +237,8 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
             </div>
