--- a/cgv_phototicket/WebContent/pub/Phototicket_button_animation01.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_button_animation01.html
@@ -65,7 +65,6 @@
 <div class="wrap">
     <!-- [S] Content -->
     <section class="content_wrap container photo_ticket" id="ContainerView">
-        <!--  todo! popup 처리    -->
         <div class="pop_header">
             <a class="btn_share" href="javascript:void(0);">
                 <i class="sprite sprite-pt sprite-icShare"></i>
@@ -284,7 +283,7 @@
                     <p class="text-lg">출력이 완료된 포토티켓입니다.</p>
                     <p class="text-sm">이미 출력된 카드는 재출력이 불가합니다.</p>
                     <div>
-                        <a class="btn-red" href="javascript:void(0);">자랑하기</a>
+                        <a class="btn-ani button--wapasha _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">삭제하기</a>
                     </div>
                 </div>
