--- a/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
@@ -284,7 +284,8 @@
                     <p class="text-lg">출력이 완료된 포토티켓입니다.</p>
                     <p class="text-sm">이미 출력된 카드는 재출력이 불가합니다.</p>
                     <div>
-                        <a class="btn-red" href="javascript:void(0);">자랑하기</a>
+<!--                        <a class="btn-ani button&#45;&#45;ujarak _btnBoast">자랑하기</a>-->
+                        <a class="btn-ripple ripple _btnBoast">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">삭제하기</a>
                     </div>
                 </div>
