--- a/cgv_phototicket/WebContent/pub/Phototicket_main_app.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_main_app.html
@@ -397,36 +397,29 @@
         </article>
         <!--  [E] 내 포토티켓     -->
 
-        <!--  [S] 포토티켓 자랑하기   -->
+        <!--  [S] 포토티켓 자랑하기    -->
         <article class="ptboast_wrap">
-            <div class="title_wrap">
-                <div class="title">
-                    포토티켓 자랑하기<a class="badge" href="javascript:void(0);">내 포토티켓 자랑</a>
-                </div>
-                <div class="all">
-                    <a class="btn-all" href="javascript:void(0);">전체보기 <i
-                            class="sprite sprite-pt sprite-icTMore"></i></a>
-                </div>
-            </div>
             <div class="imgcard_wrap">
                 <div class="row">
-                    <div class="col ">
-                        <!--  2020.04.24 경로 테스트   -->
-                        <div class="card" onclick="location.href='../pub/Phototicket_after_recommend.html'">
+                    <div class="col">
+                        <div class="card" onclick="location.href='javascript:void(0);'">
                             <div class="img">
-
                                 <img src="../images/phototicket/main/boast1@2x.png" alt="자랑한 이미지">
                             </div>
                             <div class="info">
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>999</span>
                             </div>
-                            <!--  2020.04.24 경로 테스트   -->
-                            <a class="btn_like" href="../pub/Phototicket_completed.html"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <!--
+                         날짜: 2020.04.28
+                         수정 사항 : 링크 연결 중복 현상 수정\
+                          <a class="btn_like _click" href="javas..> 분리
+                        -->
+                        <a class="btn_like2 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast2@2x.png" alt="자랑한 이미지">
                             </div>
@@ -434,14 +427,13 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast3@2x.png" alt="자랑한 이미지">
                             </div>
@@ -449,11 +441,11 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>10</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast4@2x.png" alt="자랑한 이미지">
                             </div>
@@ -461,13 +453,13 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast5@2x.png" alt="자랑한 이미지">
                             </div>
@@ -475,11 +467,11 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast6@2x.png" alt="자랑한 이미지">
                             </div>
@@ -487,13 +479,13 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
             </div>
         </article>
-        <!--  [E] 포토티켓 자랑하기   -->
+        <!--  [E] 포토티켓 자랑하기    -->
 
     </section>
     <!-- [E] Content -->
