--- a/cgv_phototicket/WebContent/pub/Phototicket_main_app.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_main_app.html
@@ -412,17 +412,14 @@
                 <div class="row">
                     <div class="col ">
                         <!--  2020.04.24 경로 테스트   -->
-                        <div class="card" onclick="location.href='../pub/Phototicket_after_recommend.html'">
+                        <div class="card" onclick="location.href=''">
                             <div class="img">
-
                                 <img src="../images/phototicket/main/boast1@2x.png" alt="자랑한 이미지">
                             </div>
                             <div class="info">
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>999</span>
                             </div>
-                            <!--  2020.04.24 경로 테스트   -->
-                            <a class="btn_like" href="../pub/Phototicket_completed.html"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                     <div class="col ">
@@ -434,9 +431,8 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-
                         </div>
+                        <a class="btn_like" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
