--- a/cgv_phototicket/WebContent/pub/Phototicket_main_web.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_main_web.html
@@ -395,7 +395,7 @@
         </article>
         <!--  [E] 내 포토티켓     -->
 
-        <!--  [S] 포토티켓 자랑하기   -->
+        <!--  [S] 포토티켓 자랑하기    -->
         <article class="ptboast_wrap">
             <div class="title_wrap">
                 <div class="title">
@@ -408,8 +408,8 @@
             </div>
             <div class="imgcard_wrap">
                 <div class="row">
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="location.href='javascript:void(0);'">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast1@2x.png" alt="자랑한 이미지">
                             </div>
@@ -417,11 +417,16 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>999</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <!--
+                         날짜: 2020.04.28
+                         수정 사항 : 링크 연결 중복 현상 수정\
+                          <a class="btn_like _click" href="javas..> 분리
+                        -->
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast2@2x.png" alt="자랑한 이미지">
                             </div>
@@ -429,13 +434,13 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="card" onclick="location.href=''">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast3@2x.png" alt="자랑한 이미지">
                             </div>
@@ -443,11 +448,11 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>10</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
-                    <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                    <div class="col">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast4@2x.png" alt="자랑한 이미지">
                             </div>
@@ -455,13 +460,13 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast5@2x.png" alt="자랑한 이미지">
                             </div>
@@ -469,11 +474,11 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col ">
-                        <div class="card" onclick="location.href=''">
+                        <div class="card" onclick="">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast6@2x.png" alt="자랑한 이미지">
                             </div>
@@ -481,13 +486,13 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
             </div>
         </article>
-        <!--  [E] 포토티켓 자랑하기   -->
+        <!--  [E] 포토티켓 자랑하기    -->
     </section>
     <!-- [E] Content -->
 </div>
