--- a/cgv_phototicket/WebContent/pub/Phototicket_after_recommend_02.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_after_recommend_02.html
@@ -88,8 +88,7 @@
                     <div class="btn_area">
                         <div class="inner">
                             <div>
-                                <!-- todo! 애니메이션 추가-->
-                                <a class="btn-red btn-lg" href="javascript:void(0);">25</a>
+                                <a class="btn-test2 btn-lg _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNorLarge"></i>25</a>
                             </div>
                         </div>
                     </div>
