--- a/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
@@ -285,13 +285,16 @@
                     <p class="text-sm">이미 출력된 카드는 재출력이 불가합니다.</p>
                     <div>
 <!--                        <a class="btn-ani button&#45;&#45;ujarak _btnBoast">자랑하기</a>-->
-                        <a class="btn-ripple ripple _btnBoast">자랑하기</a>
+                        <a class="md-btn md-btn-raised md-btn-ripple _onoff">자랑하기</a>
                         <a class="btn-grey" href="javascript:void(0);">삭제하기</a>
                     </div>
                 </div>
             </div>
         </article>
     </section>
+    <script>
+
+    </script>
     <!-- [E] Content -->
 </div>
 <!--
@@ -306,6 +309,13 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
 <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
+<script>
+$(document).ready(function () {
+    $('._onoff').on('click', function () {
+        $(this).hasClass('on') ? $(this).removeClass('on').addClass('off') : $(this).removeClass('off').addClass('on');
+    });
+})
+</script>
 <!--  [E] 2020.04.20	-->
 </body>
 </html>
