--- a/cgv_phototicket/WebContent/pub/phototicket_index.html
+++ b/cgv_phototicket/WebContent/pub/phototicket_index.html
@@ -132,7 +132,7 @@
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓_상세</td>
-					 <td>제작완료</td>
+					 <td>내포토티켓_제작완료</td>
 					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone"></td>
@@ -140,7 +140,7 @@
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓_상세</td>
-					 <td>출력완료</td>
+					 <td>내포토티켓_출력완료</td>
 					 <td class="filelink"><a href="./Phototicket_printed.html" title="새창열림" target="_blank">./Phototicket_printed.html</a></td>
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone"></td>
@@ -173,7 +173,15 @@
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓_상세</td>
 					 <td>제작완료</td>
-					 <td class="filelink"><a href="Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>
+					 <td class="filelink"><a href="Phototicket_FlipSlider.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓_상세</td>
+					 <td>제작완료</td>
+					 <td class="filelink"><a href="./Phototicket_FlipSlider_web.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_web.html</a></td>
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone"></td>
 				 </tr>
