heart_animation.html

--- a/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_button_animation03.html
@@ -312,7 +312,7 @@
 <script>
 $(document).ready(function () {
     $('._onoff').on('click', function () {
-        $(this).hasClass('on') ? $(this).removeClass('on').addClass('off') : $(this).removeClass('off').addClass('on');
+        $(this).hasClass('on') ? $(this).removeClass('on').addClass('off').text('자랑하기') : $(this).removeClass('off').addClass('on').text('자랑취소');
     });
 })
 </script>
