--- a/cgv_phototicket/WebContent/index.html
+++ b/cgv_phototicket/WebContent/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
  <a href="pub/index.html" style="border: 1px solid red" >포토티켓</a>
+ <a href="./pub/Phototicket_button_animation01.html">버튼 테스트1</a>
+ <a href="./pub/Phototicket_button_animation02.html">버튼 테스트2</a>
+ <a href="./pub/Phototicket_button_animation03.html">버튼 테스트3</a>
 </body>
 </html>
