--- a/cgv_phototicket/WebContent/pub/Phototicket_myticket_boast.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_myticket_boast.html
@@ -157,6 +157,15 @@
 
         <!--  [S] 포토티켓 자랑하기    -->
         <article class="ptboast_wrap">
+            <div class="title_wrap">
+                <div class="title">
+                    포토티켓 자랑하기<a class="badge" href="javascript:void(0);">내 포토티켓 자랑</a>
+                </div>
+                <div class="all">
+                    <a class="btn-all" href="javascript:void(0);">전체보기 <i
+                            class="sprite sprite-pt sprite-icTMore"></i></a>
+                </div>
+            </div>
             <div class="imgcard_wrap">
                 <div class="row">
                     <div class="col">
@@ -174,7 +183,7 @@
                          수정 사항 : 링크 연결 중복 현상 수정\
                           <a class="btn_like _click" href="javas..> 분리
                         -->
-                        <a class="btn_like2 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col">
                         <div class="card" onclick="">
@@ -186,7 +195,7 @@
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
                         </div>
-                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -200,7 +209,7 @@
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>10</span>
                             </div>
                         </div>
-                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col">
                         <div class="card" onclick="">
@@ -212,7 +221,7 @@
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
                         </div>
-                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -226,7 +235,7 @@
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
                         </div>
-                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                     <div class="col ">
                         <div class="card" onclick="">
@@ -238,7 +247,7 @@
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
                         </div>
-                        <a class="btn_like3 _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
+                        <a class="btn-heart _click" href="javascript:void(0);"><i class="sprite sprite-pt sprite-icBtnLikeNor"></i></a>
                     </div>
                 </div>
             </div>
